# openapi.json
@@ -973,6 +973,41 @@
           }
         }
       }
+    },
+    "/auth/test": {
+      "post": {
+        "summary": "Test JWT auth",
+        "description": "Returns your JWT user identity, provided the used JWT access token is valid.",
+        "tags": [
+          "auth"
+        ],
+        "parameters": [
+          {
+            "in": "header",
+            "required": true,
+            "name": "Authorization",
+            "description": "JWT Access Token, as 'Bearer JWT_TOKEN_HERE'",
+            "schema": {
+              "example": "Authorization: Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpZGVudGl0eSI6eyJzdWIiOiJ0ZXN0QHRlc3QuY29tIiwicHJvamVjdHMiOm51bGx9LCJ0eXBlIjoiYWNjZXNzIn0.XtShkUBz6AboojEi07D7S-RCCCezQFbBVHFkFMY1ZWs"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "example": {
+                    "sub": "test@test.com",
+                    "projects": null
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
