# sls_api/endpoints/auth.py
@@ -1,5 +1,5 @@
 from flask import Blueprint, jsonify, request
-from flask_jwt_extended import create_access_token, create_refresh_token, get_jwt_identity, jwt_refresh_token_required
+from flask_jwt_extended import create_access_token, create_refresh_token, get_jwt_identity, jwt_refresh_token_required, jwt_required
 from sls_api.models import User
 
 
@@ -80,3 +80,9 @@ def refresh_token():
             "access_token": access_token
         }
     ), 200
+
+
+@auth.route("/test", methods=["POST"])
+@jwt_required
+def test_authentication():
+    return jsonify(get_jwt_identity())
